--- a/StockMVC/WebContent/WEB-INF/web.xml
+++ b/StockMVC/WebContent/WEB-INF/web.xml
@@ -124,4 +124,35 @@
     <servlet-name>WelcomeTrading</servlet-name>
     <url-pattern>/trading/WelcomeTrading.do</url-pattern>
   </servlet-mapping>
+
+
+<servlet>
+    <servlet-name>SUP</servlet-name>
+    <servlet-class>control.root.SignUpProcessing</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SUP</servlet-name>
+    <url-pattern>/SUP.do</url-pattern>
+  </servlet-mapping>
+
+<servlet>
+    <servlet-name>SIP</servlet-name>
+    <servlet-class>control.root.SignInProcessing</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SIP</servlet-name>
+    <url-pattern>/SIP.do</url-pattern>
+  </servlet-mapping>
+<error-page>
+        <error-code>404</error-code>
+        <location>/404.jsp</location>
+    </error-page>
+<!--
+at the end
+<error-page>
+  <exception-type>java.lang.Exception</exception-type>
+  <location>/Error.jsp</location>
+</error-page>
+-->
+
 </web-app>
